Make bulma themeable with full backward compatibility :sparkles:

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -183,10 +183,7 @@
   height: 2.5em;
   justify-content: flex-start;
   line-height: 1.5;
-  padding-bottom: calc(0.5em - 1px);
-  padding-left: calc(0.75em - 1px);
-  padding-right: calc(0.75em - 1px);
-  padding-top: calc(0.5em - 1px);
+  padding: calc(0.5em - 1px) calc(0.75em - 1px);
   position: relative;
   vertical-align: top;
 }
@@ -1580,10 +1577,7 @@ a.box:active {
   color: #363636;
   cursor: pointer;
   justify-content: center;
-  padding-bottom: calc(0.5em - 1px);
-  padding-left: 1em;
-  padding-right: 1em;
-  padding-top: calc(0.5em - 1px);
+  padding: calc(0.5em - 1px) 1em;
   text-align: center;
   white-space: nowrap;
 }
@@ -2854,8 +2848,8 @@ fieldset[disabled] .button {
 
 .button.is-loading::after {
   position: absolute;
-  left: calc(50% - (1em / 2));
-  top: calc(50% - (1em / 2));
+  left: calc(50% - 0.5em);
+  top: calc(50% - 0.5em);
   position: absolute !important;
 }
 
@@ -2869,8 +2863,8 @@ fieldset[disabled] .button {
 
 .button.is-rounded {
   border-radius: 290486px;
-  padding-left: calc(1em + 0.25em);
-  padding-right: calc(1em + 0.25em);
+  padding-left: 1.25em;
+  padding-right: 1.25em;
 }
 
 .buttons {
@@ -4511,8 +4505,8 @@ fieldset[disabled] .select select:-ms-input-placeholder,
 
 .input.is-rounded {
   border-radius: 290486px;
-  padding-left: calc(calc(0.75em - 1px) + 0.375em);
-  padding-right: calc(calc(0.75em - 1px) + 0.375em);
+  padding-left: calc(1.125em - 1px);
+  padding-right: calc(1.125em - 1px);
 }
 
 .input.is-static {
@@ -7431,7 +7425,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     display: block;
     opacity: 0;
     pointer-events: none;
-    top: calc(100% + (-4px));
+    top: calc(100% + -4px);
     transform: translateY(-5px);
     transition-duration: 86ms;
     transition-property: opacity, transform;
@@ -9268,17 +9262,11 @@ label.panel-block:hover {
 }
 
 .columns {
-  margin-left: -0.75rem;
-  margin-right: -0.75rem;
-  margin-top: -0.75rem;
-}
-
-.columns:last-child {
-  margin-bottom: -0.75rem;
+  margin: -0.75rem;
 }
 
 .columns:not(:last-child) {
-  margin-bottom: calc(1.5rem - 0.75rem);
+  margin-bottom: 0.75rem;
 }
 
 .columns.is-centered {
@@ -9330,8 +9318,8 @@ label.panel-block:hover {
 
 .columns.is-variable {
   --columnGap: 0.75rem;
-  margin-left: calc(-1 * var(--columnGap));
-  margin-right: calc(-1 * var(--columnGap));
+  margin-left: calc(-1*var(--columnGap));
+  margin-right: calc(-1*var(--columnGap));
 }
 
 .columns.is-variable .column {
@@ -9873,13 +9861,7 @@ label.panel-block:hover {
 }
 
 .tile.is-ancestor {
-  margin-left: -0.75rem;
-  margin-right: -0.75rem;
-  margin-top: -0.75rem;
-}
-
-.tile.is-ancestor:last-child {
-  margin-bottom: -0.75rem;
+  margin: -0.75rem;
 }
 
 .tile.is-ancestor:not(:last-child) {
@@ -11215,7 +11197,7 @@ label.panel-block:hover {
     display: flex;
   }
   .bd-side {
-    flex: 0 0 calc(10.5rem + 1.5rem);
+    flex: 0 0 12rem;
   }
 }
 
