--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -10,16 +10,16 @@ $breadcrumb-item-separator-color: $border-hover !default
 .breadcrumb
   @extend %block
   @extend %unselectable
-  font-size: $size-normal
+  font-size: v(size-normal, $size-normal)
   white-space: nowrap
   a
     align-items: center
-    color: $breadcrumb-item-color
+    color: v(breadcrumb-item-color, $breadcrumb-item-color)
     display: flex
     justify-content: center
-    padding: $breadcrumb-item-padding-vertical $breadcrumb-item-padding-horizontal
+    padding: v(breadcrumb-item-padding-vertical, $breadcrumb-item-padding-vertical) $breadcrumb-item-padding-horizontal
     &:hover
-      color: $breadcrumb-item-hover-color
+      color: v(breadcrumb-item-hover-color, $breadcrumb-item-hover-color)
   li
     align-items: center
     display: flex
@@ -27,11 +27,11 @@ $breadcrumb-item-separator-color: $border-hover !default
       padding-left: 0
     &.is-active
       a
-        color: $breadcrumb-item-active-color
+        color: v(breadcrumb-item-active-color, $breadcrumb-item-active-color)
         cursor: default
         pointer-events: none
     & + li::before
-      color: $breadcrumb-item-separator-color
+      color: v(breadcrumb-item-separator-color, $breadcrumb-item-separator-color)
       content: "\0002f"
   ul,
   ol
@@ -55,11 +55,11 @@ $breadcrumb-item-separator-color: $border-hover !default
       justify-content: flex-end
   // Sizes
   &.is-small
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
   &.is-large
-    font-size: $size-large
+    font-size: v(size-large, $size-large)
   // Styles
   &.has-arrow-separator
     li + li::before
