--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -17,41 +17,41 @@ $menu-label-letter-spacing: 0.1em !default
 $menu-label-spacing: 1em !default
 
 .menu
-  font-size: $size-normal
+  font-size: v(size-normal, $size-normal)
   // Sizes
   &.is-small
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
   &.is-large
-    font-size: $size-large
+    font-size: v(size-large, $size-large)
 
 .menu-list
-  line-height: $menu-list-line-height
+  line-height: v(menu-list-line-height, $menu-list-line-height)
   a
-    border-radius: $menu-item-radius
-    color: $menu-item-color
+    border-radius: v(menu-item-radius, $menu-item-radius)
+    color: v(menu-item-color, $menu-item-color)
     display: block
-    padding: $menu-list-link-padding
+    padding: v(menu-list-link-padding, $menu-list-link-padding)
     &:hover
-      background-color: $menu-item-hover-background-color
-      color: $menu-item-hover-color
+      background-color: v(menu-item-hover-background-color, $menu-item-hover-background-color)
+      color: v(menu-item-hover-color, $menu-item-hover-color)
     // Modifiers
     &.is-active
-      background-color: $menu-item-active-background-color
-      color: $menu-item-active-color
+      background-color: v(menu-item-active-background-color, $menu-item-active-background-color)
+      color: v(menu-item-active-color, $menu-item-active-color)
   li
     ul
-      border-left: $menu-list-border-left
-      margin: $menu-nested-list-margin
-      padding-left: $menu-nested-list-padding-left
+      border-left: v(menu-list-border-left, $menu-list-border-left)
+      margin: v(menu-nested-list-margin, $menu-nested-list-margin)
+      padding-left: v(menu-nested-list-padding-left, $menu-nested-list-padding-left)
 
 .menu-label
-  color: $menu-label-color
-  font-size: $menu-label-font-size
-  letter-spacing: $menu-label-letter-spacing
+  color: v(menu-label-color, $menu-label-color)
+  font-size: v(menu-label-font-size, $menu-label-font-size)
+  letter-spacing: v(menu-label-letter-spacing, $menu-label-letter-spacing)
   text-transform: uppercase
   &:not(:first-child)
-    margin-top: $menu-label-spacing
+    margin-top: v(menu-label-spacing, $menu-label-spacing)
   &:not(:last-child)
-    margin-bottom: $menu-label-spacing
+    margin-bottom: v(menu-label-spacing, $menu-label-spacing)
