--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -36,78 +36,78 @@ $modal-card-body-padding: 20px !default
   justify-content: center
   overflow: hidden
   position: fixed
-  z-index: $modal-z
+  z-index: v(modal-z, $modal-z)
   // Modifiers
   &.is-active
     display: flex
 
 .modal-background
   @extend %overlay
-  background-color: $modal-background-background-color
+  background-color: v(modal-background-background-color, $modal-background-background-color)
 
 .modal-content,
 .modal-card
-  margin: 0 $modal-content-margin-mobile
-  max-height: calc(100vh - #{$modal-content-spacing-mobile})
+  margin: 0 v(modal-content-margin-mobile, $modal-content-margin-mobile)
+  max-height: calc(100vh - #{v(modal-content-spacing-mobile, $modal-content-spacing-mobile)})
   overflow: auto
   position: relative
   width: 100%
   // Responsiveness
   +tablet
     margin: 0 auto
-    max-height: calc(100vh - #{$modal-content-spacing-tablet})
-    width: $modal-content-width
+    max-height: calc(100vh - #{v(modal-content-spacing-tablet, $modal-content-spacing-tablet)})
+    width: v(modal-content-width, $modal-content-width)
 
 .modal-close
   @extend %delete
   background: none
-  height: $modal-close-dimensions
+  height: v(modal-close-dimensions, $modal-close-dimensions)
   position: fixed
-  right: $modal-close-right
-  top: $modal-close-top
-  width: $modal-close-dimensions
+  right: v(modal-close-right, $modal-close-right)
+  top: v(modal-close-top, $modal-close-top)
+  width: v(modal-close-dimensions, $modal-close-dimensions)
 
 .modal-card
   display: flex
   flex-direction: column
-  max-height: calc(100vh - #{$modal-card-spacing})
+  max-height: calc(100vh - #{v(modal-card-spacing, $modal-card-spacing)})
   overflow: hidden
   -ms-overflow-y: visible
 
 .modal-card-head,
 .modal-card-foot
   align-items: center
-  background-color: $modal-card-head-background-color
+  background-color: v(modal-card-head-background-color, $modal-card-head-background-color)
   display: flex
   flex-shrink: 0
   justify-content: flex-start
-  padding: $modal-card-head-padding
+  padding: v(modal-card-head-padding, $modal-card-head-padding)
   position: relative
 
 .modal-card-head
-  border-bottom: $modal-card-head-border-bottom
-  border-top-left-radius: $modal-card-head-radius
-  border-top-right-radius: $modal-card-head-radius
+  border-bottom: v(modal-card-head-border-bottom, $modal-card-head-border-bottom)
+  border-top-left-radius: v(modal-card-head-radius, $modal-card-head-radius)
+  border-top-right-radius: v(modal-card-head-radius, $modal-card-head-radius)
 
 .modal-card-title
-  color: $modal-card-title-color
+  color: v(modal-card-title-color, $modal-card-title-color)
   flex-grow: 1
   flex-shrink: 0
-  font-size: $modal-card-title-size
-  line-height: $modal-card-title-line-height
+  font-size: v(modal-card-title-size, $modal-card-title-size)
+  line-height: v(modal-card-title-line-height, $modal-card-title-line-height)
 
 .modal-card-foot
-  border-bottom-left-radius: $modal-card-foot-radius
-  border-bottom-right-radius: $modal-card-foot-radius
-  border-top: $modal-card-foot-border-top
+  border-bottom-left-radius: v(modal-card-foot-radius, $modal-card-foot-radius)
+  border-bottom-right-radius: v(modal-card-foot-radius, $modal-card-foot-radius)
+  border-top: v(modal-card-foot-border-top, $modal-card-foot-border-top)
   .button
     &:not(:last-child)
       margin-right: 0.5em
 
 .modal-card-body
   +overflow-touch
-  background-color: $modal-card-body-background-color
+  background-color: v(modal-card-body-background-color, $modal-card-body-background-color)
   flex-grow: 1
   flex-shrink: 1
   overflow: auto
-  padding: $modal-card-body-padding
+  padding: v(modal-card-body-padding, $modal-card-body-padding)
