--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -31,23 +31,23 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2)
 
 .pagination
   @extend %block
-  font-size: $size-normal
-  margin: $pagination-margin
+  font-size: v(size-normal, $size-normal)
+  margin: v(pagination-margin, $pagination-margin)
   // Sizes
   &.is-small
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
   &.is-large
-    font-size: $size-large
+    font-size: v(size-large, $size-large)
   &.is-rounded
     .pagination-previous,
     .pagination-next
       padding-left: 1em
       padding-right: 1em
-      border-radius: $radius-rounded
+      border-radius: v(radius-rounded, $radius-rounded)
     .pagination-link
-      border-radius: $radius-rounded
+      border-radius: v(radius-rounded, $radius-rounded)
 
 .pagination,
 .pagination-list
@@ -62,31 +62,31 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2)
 .pagination-ellipsis
   @extend %control
   @extend %unselectable
-  font-size: $pagination-item-font-size
+  font-size: v(pagination-item-font-size, $pagination-item-font-size)
   justify-content: center
-  margin: $pagination-item-margin
-  padding-left: $pagination-item-padding-left
-  padding-right: $pagination-item-padding-right
+  margin: v(pagination-item-margin, $pagination-item-margin)
+  padding-left: v(pagination-item-padding-left, $pagination-item-padding-left)
+  padding-right: v(pagination-item-padding-right, $pagination-item-padding-right)
   text-align: center
 
 .pagination-previous,
 .pagination-next,
 .pagination-link
-  border-color: $pagination-border-color
-  color: $pagination-color
-  min-width: $pagination-min-width
+  border-color: v(pagination-border-color, $pagination-border-color)
+  color: v(pagination-color, $pagination-color)
+  min-width: v(pagination-min-width, $pagination-min-width)
   &:hover
-    border-color: $pagination-hover-border-color
-    color: $pagination-hover-color
+    border-color: v(pagination-hover-border-color, $pagination-hover-border-color)
+    color: v(pagination-hover-color, $pagination-hover-color)
   &:focus
-    border-color: $pagination-focus-border-color
+    border-color: v(pagination-focus-border-color, $pagination-focus-border-color)
   &:active
-    box-shadow: $pagination-shadow-inset
+    box-shadow: v(pagination-shadow-inset, $pagination-shadow-inset)
   &[disabled]
-    background-color: $pagination-disabled-background-color
-    border-color: $pagination-disabled-border-color
+    background-color: v(pagination-disabled-background-color, $pagination-disabled-background-color)
+    border-color: v(pagination-disabled-border-color, $pagination-disabled-border-color)
     box-shadow: none
-    color: $pagination-disabled-color
+    color: v(pagination-disabled-color, $pagination-disabled-color)
     opacity: 0.5
 
 .pagination-previous,
@@ -97,12 +97,12 @@ $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2)
 
 .pagination-link
   &.is-current
-    background-color: $pagination-current-background-color
-    border-color: $pagination-current-border-color
-    color: $pagination-current-color
+    background-color: v(pagination-current-background-color, $pagination-current-background-color)
+    border-color: v(pagination-current-border-color, $pagination-current-border-color)
+    color: v(pagination-current-color, $pagination-current-color)
 
 .pagination-ellipsis
-  color: $pagination-ellipsis-color
+  color: v(pagination-ellipsis-color, $pagination-ellipsis-color)
   pointer-events: none
 
 .pagination-list
