--- a/sass/elements/container.sass
+++ b/sass/elements/container.sass
@@ -7,18 +7,18 @@ $container-offset: (2 * $gap) !default
   width: auto
   &.is-fluid
     max-width: none
-    padding-left: $gap
-    padding-right: $gap
+    padding-left: v(gap, $gap)
+    padding-right: v(gap, $gap)
     width: 100%
   +desktop
-    max-width: $desktop - $container-offset
+    max-width: calc(#{v(desktop, $desktop)} - #{v(container-offset, $container-offset)})
   +until-widescreen
     &.is-widescreen
-      max-width: $widescreen - $container-offset
+      max-width: calc(#{v(widescreen, $widescreen)} - #{v(container-offset, $container-offset)})
   +until-fullhd
     &.is-fullhd
-      max-width: $fullhd - $container-offset
+      max-width: calc(#{v(fullhd, $fullhd)} - #{v(container-offset, $container-offset)})
   +widescreen
-    max-width: $widescreen - $container-offset
+    max-width: calc(#{v(widescreen, $widescreen)} - #{v(container-offset, $container-offset)})
   +fullhd
-    max-width: $fullhd - $container-offset
+    max-width: calc(#{v(fullhd, $fullhd)} - #{v(container-offset, $container-offset)})
