--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -38,9 +38,9 @@ $content-table-foot-cell-color: $text-strong !default
   h4,
   h5,
   h6
-    color: $content-heading-color
-    font-weight: $content-heading-weight
-    line-height: $content-heading-line-height
+    color: v(content-heading-color, $content-heading-color)
+    font-weight: v(content-heading-weight, $content-heading-weight)
+    line-height: v(content-heading-line-height, $content-heading-line-height)
   h1
     font-size: 2em
     margin-bottom: 0.5em
@@ -66,9 +66,9 @@ $content-table-foot-cell-color: $text-strong !default
     font-size: 1em
     margin-bottom: 1em
   blockquote
-    background-color: $content-blockquote-background-color
-    border-left: $content-blockquote-border-left
-    padding: $content-blockquote-padding
+    background-color: v(content-blockquote-background-color, $content-blockquote-background-color)
+    border-left: v(content-blockquote-border-left, $content-blockquote-border-left)
+    padding: v(content-blockquote-padding, $content-blockquote-padding)
   ol
     list-style-position: outside
     margin-left: 2em
@@ -109,7 +109,7 @@ $content-table-foot-cell-color: $text-strong !default
   pre
     +overflow-touch
     overflow-x: auto
-    padding: $content-pre-padding
+    padding: v(content-pre-padding, $content-pre-padding)
     white-space: pre
     word-wrap: normal
   sup,
@@ -119,24 +119,24 @@ $content-table-foot-cell-color: $text-strong !default
     width: 100%
     td,
     th
-      border: $content-table-cell-border
-      border-width: $content-table-cell-border-width
-      padding: $content-table-cell-padding
+      border: v(content-table-cell-border, $content-table-cell-border)
+      border-width: v(content-table-cell-border-width, $content-table-cell-border-width)
+      padding: v(content-table-cell-padding, $content-table-cell-padding)
       vertical-align: top
     th
-      color: $content-table-cell-heading-color
+      color: v(content-table-cell-heading-color, $content-table-cell-heading-color)
       &:not([align])
         text-align: left
     thead
       td,
       th
-        border-width: $content-table-head-cell-border-width
-        color: $content-table-head-cell-color
+        border-width: v(content-table-head-cell-border-width, $content-table-head-cell-border-width)
+        color: v(content-table-head-cell-color, $content-table-head-cell-color)
     tfoot
       td,
       th
-        border-width: $content-table-foot-cell-border-width
-        color: $content-table-foot-cell-color
+        border-width: v(content-table-foot-cell-border-width, $content-table-foot-cell-border-width)
+        color: v(content-table-foot-cell-color, $content-table-foot-cell-color)
     tbody
       tr
         &:last-child
@@ -148,8 +148,8 @@ $content-table-foot-cell-color: $text-strong !default
       margin-top: 0
   // Sizes
   &.is-small
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
   &.is-large
-    font-size: $size-large
+    font-size: v(size-large, $size-large)
