--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -19,10 +19,10 @@ $tag-delete-margin: 1px !default
   // Sizes
   &.are-medium
     .tag:not(.is-normal):not(.is-large)
-      font-size: $size-normal
+      font-size: v(size-normal, $size-normal)
   &.are-large
     .tag:not(.is-normal):not(.is-medium)
-      font-size: $size-medium
+      font-size: v(size-medium, $size-medium)
   &.is-centered
     justify-content: center
     .tag
@@ -48,11 +48,11 @@ $tag-delete-margin: 1px !default
 
 .tag:not(body)
   align-items: center
-  background-color: $tag-background-color
-  border-radius: $tag-radius
-  color: $tag-color
+  background-color: v(tag-background-color, $tag-background-color)
+  border-radius: v(tag-radius, $tag-radius)
+  color: v(tag-color, $tag-color)
   display: inline-flex
-  font-size: $size-small
+  font-size: v(size-small, $size-small)
   height: 2em
   justify-content: center
   line-height: 1.5
@@ -67,22 +67,22 @@ $tag-delete-margin: 1px !default
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
     &.is-#{$name}
-      background-color: $color
-      color: $color-invert
+      background-color: v($name, $color)
+      color: v($name+'-invert', $color-invert)
       // If a light and dark colors are provided
       @if length($pair) > 3
         $color-light: nth($pair, 3)
         $color-dark: nth($pair, 4)
         &.is-light
-          background-color: $color-light
-          color: $color-dark
+          background-color: v($name+'-light', $color-light)
+          color: v($name+'-dark', $color-dark)
   // Sizes
   &.is-normal
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-normal
+    font-size: v(size-normal, $size-normal)
   &.is-large
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
   .icon
     &:first-child:not(:last-child)
       margin-left: -0.375em
@@ -95,7 +95,7 @@ $tag-delete-margin: 1px !default
       margin-right: -0.375em
   // Modifiers
   &.is-delete
-    margin-left: $tag-delete-margin
+    margin-left: v(tag-delete-margin, $tag-delete-margin)
     padding: 0
     position: relative
     width: 2em
@@ -117,11 +117,11 @@ $tag-delete-margin: 1px !default
       width: 1px
     &:hover,
     &:focus
-      background-color: darken($tag-background-color, 5%)
+      background-color: vDarken(tag-background-color, $tag-background-color, 5%)
     &:active
-      background-color: darken($tag-background-color, 10%)
+      background-color: vDarken(tag-background-color, $tag-background-color, 10%)
   &.is-rounded
-    border-radius: $radius-rounded
+    border-radius: v(radius-rounded, $radius-rounded)
 
 a.tag
   &:hover
