--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -37,9 +37,9 @@
     left: calc(50% - 8px)
     position: absolute
     transform-origin: center
-    transition-duration: $speed
+    transition-duration: v(speed, $speed)
     transition-property: background-color, opacity, transform
-    transition-timing-function: $easing
+    transition-timing-function: v(easing, $easing)
     width: 16px
     &:nth-child(1)
       top: calc(50% - 6px)
@@ -172,7 +172,7 @@
   -webkit-appearance: none
   background-color: bulmaRgba($scheme-invert, 0.2)
   border: none
-  border-radius: $radius-rounded
+  border-radius: v(radius-rounded, $radius-rounded)
   cursor: pointer
   pointer-events: auto
   display: inline-block
@@ -190,7 +190,7 @@
   width: 20px
   &::before,
   &::after
-    background-color: $scheme-main
+    background-color: v(scheme-main, $scheme-main)
     content: ""
     display: block
     left: 50%
@@ -237,8 +237,8 @@
 
 =loader
   animation: spinAround 500ms infinite linear
-  border: 2px solid $grey-lighter
-  border-radius: $radius-rounded
+  border: 2px solid v(grey-lighter, $grey-lighter)
+  border-radius: v(radius-rounded, $radius-rounded)
   border-right-color: transparent
   border-top-color: transparent
   content: ""
