--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -7,7 +7,7 @@ $media-border-color: bulmaRgba($border, 0.5) !default
   .content:not(:last-child)
     margin-bottom: 0.75rem
   .media
-    border-top: 1px solid $media-border-color
+    border-top: 1px solid v(media-border-color, $media-border-color)
     display: flex
     padding-top: 0.75rem
     .content:not(:last-child),
@@ -18,7 +18,7 @@ $media-border-color: bulmaRgba($border, 0.5) !default
       & + .media
         margin-top: 0.5rem
   & + .media
-    border-top: 1px solid $media-border-color
+    border-top: 1px solid v(media-border-color, $media-border-color)
     margin-top: 1rem
     padding-top: 1rem
   // Sizes
