--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -50,91 +50,91 @@ $navbar-breakpoint: $desktop !default
   left: 0
   position: fixed
   right: 0
-  z-index: $navbar-fixed-z
+  z-index: v(navbar-fixed-z, $navbar-fixed-z)
 
 .navbar
-  background-color: $navbar-background-color
-  min-height: $navbar-height
+  background-color: v(navbar-background-color, $navbar-background-color)
+  min-height: v(navbar-height, $navbar-height)
   position: relative
-  z-index: $navbar-z
+  z-index: v(navbar-z, $navbar-z)
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
     &.is-#{$name}
-      background-color: $color
-      color: $color-invert
+      background-color: v($name, $color)
+      color: v($name+'-invert', $color-invert)
       .navbar-brand
         & > .navbar-item,
         .navbar-link
-          color: $color-invert
+          color: v($name+'-invert', $color-invert)
         & > a.navbar-item,
         .navbar-link
           &:focus,
           &:hover,
           &.is-active
-            background-color: bulmaDarken($color, 5%)
-            color: $color-invert
+            background-color: vDarken($name, $color, 5%)
+            color: v($name+'-invert', $color-invert)
         .navbar-link
           &::after
-            border-color: $color-invert
+            border-color: v($name+'-invert', $color-invert)
       .navbar-burger
-        color: $color-invert
+        color: v($name+'-invert', $color-invert)
       +from($navbar-breakpoint)
         .navbar-start,
         .navbar-end
           & > .navbar-item,
           .navbar-link
-            color: $color-invert
+            color: v($name+'-invert', $color-invert)
           & > a.navbar-item,
           .navbar-link
             &:focus,
             &:hover,
             &.is-active
-              background-color: bulmaDarken($color, 5%)
-              color: $color-invert
+              background-color: vDarken($name, $color, 5%)
+              color: v($name+'-invert', $color-invert)
           .navbar-link
             &::after
-              border-color: $color-invert
+              border-color: v($name+'-invert', $color-invert)
         .navbar-item.has-dropdown:focus .navbar-link,
         .navbar-item.has-dropdown:hover .navbar-link,
         .navbar-item.has-dropdown.is-active .navbar-link
-          background-color: bulmaDarken($color, 5%)
-          color: $color-invert
+          background-color: vDarken($name, $color, 5%)
+          color: v($name+'-invert', $color-invert)
         .navbar-dropdown
           a.navbar-item
             &.is-active
-              background-color: $color
-              color: $color-invert
+              background-color: v($name, $color)
+              color: v($name+'-invert', $color-invert)
   & > .container
     align-items: stretch
     display: flex
-    min-height: $navbar-height
+    min-height: v(navbar-height, $navbar-height)
     width: 100%
   &.has-shadow
-    box-shadow: $navbar-box-shadow-size $navbar-box-shadow-color
+    box-shadow: v(navbar-box-shadow-size, $navbar-box-shadow-size) v(navbar-box-shadow-color, $navbar-box-shadow-color)
   &.is-fixed-bottom,
   &.is-fixed-top
     +navbar-fixed
   &.is-fixed-bottom
     bottom: 0
     &.has-shadow
-      box-shadow: $navbar-bottom-box-shadow-size $navbar-box-shadow-color
+      box-shadow: v(navbar-bottom-box-shadow-size, $navbar-bottom-box-shadow-size) v(navbar-box-shadow-color, $navbar-box-shadow-color)
   &.is-fixed-top
     top: 0
 
 html,
 body
   &.has-navbar-fixed-top
-    padding-top: $navbar-height
+    padding-top: v(navbar-height, $navbar-height)
   &.has-navbar-fixed-bottom
-    padding-bottom: $navbar-height
+    padding-bottom: v(navbar-height, $navbar-height)
 
 .navbar-brand,
 .navbar-tabs
   align-items: stretch
   display: flex
   flex-shrink: 0
-  min-height: $navbar-height
+  min-height: v(navbar-height, $navbar-height)
 
 .navbar-brand
   a.navbar-item
@@ -149,7 +149,7 @@ body
   overflow-y: hidden
 
 .navbar-burger
-  color: $navbar-burger-color
+  color: v(navbar-burger-color, $navbar-burger-color)
   +hamburger($navbar-height)
   margin-left: auto
 
@@ -158,7 +158,7 @@ body
 
 .navbar-item,
 .navbar-link
-  color: $navbar-item-color
+  color: v(navbar-item-color, $navbar-item-color)
   display: block
   line-height: 1.5
   padding: 0.5rem 0.75rem
@@ -175,14 +175,14 @@ a.navbar-item,
   &:focus-within,
   &:hover,
   &.is-active
-    background-color: $navbar-item-hover-background-color
-    color: $navbar-item-hover-color
+    background-color: v(navbar-item-hover-background-color, $navbar-item-hover-background-color)
+    color: v(navbar-item-hover-color, $navbar-item-hover-color)
 
 .navbar-item
   flex-grow: 0
   flex-shrink: 0
   img
-    max-height: $navbar-item-img-max-height
+    max-height: v(navbar-item-img-max-height, $navbar-item-img-max-height)
   &.has-dropdown
     padding: 0
   &.is-expanded
@@ -190,19 +190,19 @@ a.navbar-item,
     flex-shrink: 1
   &.is-tab
     border-bottom: 1px solid transparent
-    min-height: $navbar-height
+    min-height: v(navbar-height, $navbar-height)
     padding-bottom: calc(0.5rem - 1px)
     &:focus,
     &:hover
-      background-color: $navbar-tab-hover-background-color
-      border-bottom-color: $navbar-tab-hover-border-bottom-color
+      background-color: v(navbar-tab-hover-background-color, $navbar-tab-hover-background-color)
+      border-bottom-color: v(navbar-tab-hover-border-bottom-color, $navbar-tab-hover-border-bottom-color)
     &.is-active
-      background-color: $navbar-tab-active-background-color
-      border-bottom-color: $navbar-tab-active-border-bottom-color
-      border-bottom-style: $navbar-tab-active-border-bottom-style
-      border-bottom-width: $navbar-tab-active-border-bottom-width
-      color: $navbar-tab-active-color
-      padding-bottom: calc(0.5rem - #{$navbar-tab-active-border-bottom-width})
+      background-color: v(navbar-tab-active-background-color, $navbar-tab-active-background-color)
+      border-bottom-color: v(navbar-tab-active-border-bottom-color, $navbar-tab-active-border-bottom-color)
+      border-bottom-style: v(navbar-tab-active-border-bottom-style, $navbar-tab-active-border-bottom-style)
+      border-bottom-width: v(navbar-tab-active-border-bottom-width, $navbar-tab-active-border-bottom-width)
+      color: v(navbar-tab-active-color, $navbar-tab-active-color)
+      padding-bottom: calc(0.5rem - #{v(navbar-tab-active-border-bottom-width, $navbar-tab-active-border-bottom-width)})
 
 .navbar-content
   flex-grow: 1
@@ -212,7 +212,7 @@ a.navbar-item,
   padding-right: 2.5em
   &::after
     @extend %arrow
-    border-color: $navbar-dropdown-arrow
+    border-color: v(navbar-dropdown-arrow, $navbar-dropdown-arrow)
     margin-top: -0.375em
     right: 1.125em
 
@@ -225,10 +225,10 @@ a.navbar-item,
     padding-right: 1.5rem
 
 .navbar-divider
-  background-color: $navbar-divider-background-color
+  background-color: v(navbar-divider-background-color, $navbar-divider-background-color)
   border: none
   display: none
-  height: $navbar-divider-height
+  height: v(navbar-divider-height, $navbar-divider-height)
   margin: 0.5rem 0
 
 +until($navbar-breakpoint)
@@ -243,8 +243,8 @@ a.navbar-item,
     &::after
       display: none
   .navbar-menu
-    background-color: $navbar-background-color
-    box-shadow: 0 8px 16px bulmaRgba($scheme-invert, 0.1)
+    background-color: v(navbar-background-color, $navbar-background-color)
+    box-shadow: 0 8px 16px bulmaRgba(v(scheme-invert, $scheme-invert), 0.1)
     padding: 0.5rem 0
     &.is-active
       display: block
@@ -256,21 +256,21 @@ a.navbar-item,
     &.is-fixed-bottom-touch
       bottom: 0
       &.has-shadow
-        box-shadow: 0 -2px 3px bulmaRgba($scheme-invert, 0.1)
+        box-shadow: 0 -2px 3px bulmaRgba(v(scheme-invert, $scheme-invert), 0.1)
     &.is-fixed-top-touch
       top: 0
     &.is-fixed-top,
     &.is-fixed-top-touch
       .navbar-menu
         +overflow-touch
-        max-height: calc(100vh - #{$navbar-height})
+        max-height: calc(100vh - #{v(navbar-height, $navbar-height)})
         overflow: auto
   html,
   body
     &.has-navbar-fixed-top-touch
-      padding-top: $navbar-height
+      padding-top: v(navbar-height, $navbar-height)
     &.has-navbar-fixed-bottom-touch
-      padding-bottom: $navbar-height
+      padding-bottom: v(navbar-height, $navbar-height)
 
 +from($navbar-breakpoint)
   .navbar,
@@ -280,15 +280,15 @@ a.navbar-item,
     align-items: stretch
     display: flex
   .navbar
-    min-height: $navbar-height
+    min-height: v(navbar-height, $navbar-height)
     &.is-spaced
-      padding: $navbar-padding-vertical $navbar-padding-horizontal
+      padding: v(navbar-padding-vertical, $navbar-padding-vertical) v(navbar-padding-horizontal, $navbar-padding-horizontal)
       .navbar-start,
       .navbar-end
         align-items: center
       a.navbar-item,
       .navbar-link
-        border-radius: $radius
+        border-radius: v(radius, $radius)
     &.is-transparent
       a.navbar-item,
       .navbar-link
@@ -307,11 +307,11 @@ a.navbar-item,
         a.navbar-item
           &:focus,
           &:hover
-            background-color: $navbar-dropdown-item-hover-background-color
-            color: $navbar-dropdown-item-hover-color
+            background-color: v(navbar-dropdown-item-hover-background-color, $navbar-dropdown-item-hover-background-color)
+            color: v(navbar-dropdown-item-hover-color, $navbar-dropdown-item-hover-color)
           &.is-active
-            background-color: $navbar-dropdown-item-active-background-color
-            color: $navbar-dropdown-item-active-color
+            background-color: v(navbar-dropdown-item-active-background-color, $navbar-dropdown-item-active-background-color)
+            color: v(navbar-dropdown-item-active-color, $navbar-dropdown-item-active-color)
   .navbar-burger
     display: none
   .navbar-item,
@@ -325,11 +325,11 @@ a.navbar-item,
       .navbar-link::after
         transform: rotate(135deg) translate(0.25em, -0.25em)
       .navbar-dropdown
-        border-bottom: $navbar-dropdown-border-top
-        border-radius: $navbar-dropdown-radius $navbar-dropdown-radius 0 0
+        border-bottom: v(navbar-dropdown-border-top, $navbar-dropdown-border-top)
+        border-radius: v(navbar-dropdown-radius, $navbar-dropdown-radius) v(navbar-dropdown-radius, $navbar-dropdown-radius) 0 0
         border-top: none
         bottom: 100%
-        box-shadow: 0 -8px 8px bulmaRgba($scheme-invert, 0.1)
+        box-shadow: 0 -8px 8px vAlpha(scheme-invert, $scheme-invert, 0.1)
         top: auto
     &.is-active,
     &.is-hoverable:focus,
@@ -352,18 +352,18 @@ a.navbar-item,
     justify-content: flex-end
     margin-left: auto
   .navbar-dropdown
-    background-color: $navbar-dropdown-background-color
-    border-bottom-left-radius: $navbar-dropdown-radius
-    border-bottom-right-radius: $navbar-dropdown-radius
-    border-top: $navbar-dropdown-border-top
-    box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1)
+    background-color: v(navbar-dropdown-background-color, $navbar-dropdown-background-color)
+    border-bottom-left-radius: v(navbar-dropdown-radius, $navbar-dropdown-radius)
+    border-bottom-right-radius: v(navbar-dropdown-radius, $navbar-dropdown-radius)
+    border-top: v(navbar-dropdown-border-top, $navbar-dropdown-border-top)
+    box-shadow: 0 8px 8px bulmaRgba(v(scheme-invert, $scheme-invert), 0.1)
     display: none
     font-size: 0.875rem
     left: 0
     min-width: 100%
     position: absolute
     top: 100%
-    z-index: $navbar-dropdown-z
+    z-index: v(navbar-dropdown-z, $navbar-dropdown-z)
     .navbar-item
       padding: 0.375rem 1rem
       white-space: nowrap
@@ -371,22 +371,22 @@ a.navbar-item,
       padding-right: 3rem
       &:focus,
       &:hover
-        background-color: $navbar-dropdown-item-hover-background-color
-        color: $navbar-dropdown-item-hover-color
+        background-color: v(navbar-dropdown-item-hover-background-color, $navbar-dropdown-item-hover-background-color)
+        color: v(navbar-dropdown-item-hover-color, $navbar-dropdown-item-hover-color)
       &.is-active
-        background-color: $navbar-dropdown-item-active-background-color
-        color: $navbar-dropdown-item-active-color
+        background-color: v(navbar-dropdown-item-active-background-color, $navbar-dropdown-item-active-background-color)
+        color: v(navbar-dropdown-item-active-color, $navbar-dropdown-item-active-color)
     .navbar.is-spaced &,
     &.is-boxed
-      border-radius: $navbar-dropdown-boxed-radius
+      border-radius: v(navbar-dropdown-boxed-radius, $navbar-dropdown-boxed-radius)
       border-top: none
-      box-shadow: $navbar-dropdown-boxed-shadow
+      box-shadow: v(navbar-dropdown-boxed-shadow, $navbar-dropdown-boxed-shadow)
       display: block
       opacity: 0
       pointer-events: none
-      top: calc(100% + (#{$navbar-dropdown-offset}))
+      top: calc(100% + (#{v(navbar-dropdown-offset, $navbar-dropdown-offset)}))
       transform: translateY(-5px)
-      transition-duration: $speed
+      transition-duration: v(speed, $speed)
       transition-property: opacity, transform
     &.is-right
       left: auto
@@ -407,35 +407,35 @@ a.navbar-item,
     &.is-fixed-bottom-desktop
       bottom: 0
       &.has-shadow
-        box-shadow: 0 -2px 3px bulmaRgba($scheme-invert, 0.1)
+        box-shadow: 0 -2px 3px bulmaRgba(v(scheme-invert, $scheme-invert), 0.1)
     &.is-fixed-top-desktop
       top: 0
   html,
   body
     &.has-navbar-fixed-top-desktop
-      padding-top: $navbar-height
+      padding-top: v(navbar-height, $navbar-height)
     &.has-navbar-fixed-bottom-desktop
-      padding-bottom: $navbar-height
+      padding-bottom: v(navbar-height, $navbar-height)
     &.has-spaced-navbar-fixed-top
-      padding-top: $navbar-height + ($navbar-padding-vertical * 2)
+      padding-top: v(navbar-height, $navbar-height) + ($navbar-padding-vertical * 2)
     &.has-spaced-navbar-fixed-bottom
-      padding-bottom: $navbar-height + ($navbar-padding-vertical * 2)
+      padding-bottom: v(navbar-height, $navbar-height) + ($navbar-padding-vertical * 2)
   // Hover/Active states
   a.navbar-item,
   .navbar-link
     &.is-active
-      color: $navbar-item-active-color
+      color: v(navbar-item-active-color, $navbar-item-active-color)
     &.is-active:not(:focus):not(:hover)
-      background-color: $navbar-item-active-background-color
+      background-color: v(navbar-item-active-background-color, $navbar-item-active-background-color)
   .navbar-item.has-dropdown
     &:focus,
     &:hover,
     &.is-active
       .navbar-link
-        background-color: $navbar-item-hover-background-color
+        background-color: v(navbar-item-hover-background-color, $navbar-item-hover-background-color)
 
 // Combination
 
 .hero
   &.is-fullheight-with-navbar
-    min-height: calc(100vh - #{$navbar-height})
+    min-height: calc(100vh - #{v(navbar-height, $navbar-height)})
