--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -1,7 +1,7 @@
 $panel-margin: $block-spacing !default
 $panel-item-border: 1px solid $border-light !default
 $panel-radius: $radius-large !default
-$panel-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default
+$panel-shadow: 0 0.5em 1em -0.125em bulmaRgba($scheme-invert, 0.1), 0 0px 0 1px bulmaRgba($scheme-invert, 0.02) !default
 
 $panel-heading-background-color: $border-light !default
 $panel-heading-color: $text-strong !default
@@ -29,11 +29,11 @@ $panel-icon-color: $text-light !default
 $panel-colors: $colors !default
 
 .panel
-  border-radius: $panel-radius
-  box-shadow: $panel-shadow
-  font-size: $size-normal
+  border-radius: v(panel-radius, $panel-radius)
+  box-shadow: v(panel-shadow, $panel-shadow)
+  font-size: v(size-normal, $size-normal)
   &:not(:last-child)
-    margin-bottom: $panel-margin
+    margin-bottom: v(panel-margin, $panel-margin)
   // Colors
   @each $name, $components in $panel-colors
     $color: nth($components, 1)
@@ -50,40 +50,40 @@ $panel-colors: $colors !default
 .panel-tabs,
 .panel-block
   &:not(:last-child)
-    border-bottom: $panel-item-border
+    border-bottom: v(panel-item-border, $panel-item-border)
 
 .panel-heading
-  background-color: $panel-heading-background-color
-  border-radius: $panel-radius $panel-radius 0 0
-  color: $panel-heading-color
-  font-size: $panel-heading-size
-  font-weight: $panel-heading-weight
-  line-height: $panel-heading-line-height
-  padding: $panel-heading-padding
+  background-color: v(panel-heading-background-color, $panel-heading-background-color)
+  border-radius: v(panel-radius, $panel-radius) $panel-radius 0 0
+  color: v(panel-heading-color, $panel-heading-color)
+  font-size: v(panel-heading-size, $panel-heading-size)
+  font-weight: v(panel-heading-weight, $panel-heading-weight)
+  line-height: v(panel-heading-line-height, $panel-heading-line-height)
+  padding: v(panel-heading-padding, $panel-heading-padding)
 
 .panel-tabs
   align-items: flex-end
   display: flex
-  font-size: $panel-tabs-font-size
+  font-size: v(panel-tabs-font-size, $panel-tabs-font-size)
   justify-content: center
   a
-    border-bottom: $panel-tab-border-bottom
+    border-bottom: v(panel-tab-border-bottom, $panel-tab-border-bottom)
     margin-bottom: -1px
     padding: 0.5em
     // Modifiers
     &.is-active
-      border-bottom-color: $panel-tab-active-border-bottom-color
-      color: $panel-tab-active-color
+      border-bottom-color: v(panel-tab-active-border-bottom-color, $panel-tab-active-border-bottom-color)
+      color: v(panel-tab-active-color, $panel-tab-active-color)
 
 .panel-list
   a
-    color: $panel-list-item-color
+    color: v(panel-list-item-color, $panel-list-item-color)
     &:hover
-      color: $panel-list-item-hover-color
+      color: v(panel-list-item-hover-color, $panel-list-item-hover-color)
 
 .panel-block
   align-items: center
-  color: $panel-block-color
+  color: v(panel-block-color, $panel-block-color)
   display: flex
   justify-content: flex-start
   padding: 0.5em 0.75em
@@ -96,23 +96,23 @@ $panel-colors: $colors !default
   &.is-wrapped
     flex-wrap: wrap
   &.is-active
-    border-left-color: $panel-block-active-border-left-color
-    color: $panel-block-active-color
+    border-left-color: v(panel-block-active-border-left-color, $panel-block-active-border-left-color)
+    color: v(panel-block-active-color, $panel-block-active-color)
     .panel-icon
-      color: $panel-block-active-icon-color
+      color: v(panel-block-active-icon-color, $panel-block-active-icon-color)
   &:last-child
-    border-bottom-left-radius: $panel-radius
-    border-bottom-right-radius: $panel-radius
+    border-bottom-left-radius: v(panel-radius, $panel-radius)
+    border-bottom-right-radius: v(panel-radius, $panel-radius)
 
 a.panel-block,
 label.panel-block
   cursor: pointer
   &:hover
-    background-color: $panel-block-hover-background-color
+    background-color: v(panel-block-hover-background-color, $panel-block-hover-background-color)
 
 .panel-icon
   +fa(14px, 1em)
-  color: $panel-icon-color
+  color: v(panel-icon-color, $panel-icon-color)
   margin-right: 0.75em
   .fa
     font-size: inherit
