--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -32,36 +32,36 @@ $tabs-toggle-link-active-color: $link-invert !default
   @extend %unselectable
   align-items: stretch
   display: flex
-  font-size: $size-normal
+  font-size: v(size-normal, $size-normal)
   justify-content: space-between
   overflow: hidden
   overflow-x: auto
   white-space: nowrap
   a
     align-items: center
-    border-bottom-color: $tabs-border-bottom-color
-    border-bottom-style: $tabs-border-bottom-style
-    border-bottom-width: $tabs-border-bottom-width
-    color: $tabs-link-color
+    border-bottom-color: v(tabs-border-bottom-color, $tabs-border-bottom-color)
+    border-bottom-style: v(tabs-border-bottom-style, $tabs-border-bottom-style)
+    border-bottom-width: v(tabs-border-bottom-width, $tabs-border-bottom-width)
+    color: v(tabs-link-color, $tabs-link-color)
     display: flex
     justify-content: center
-    margin-bottom: -#{$tabs-border-bottom-width}
-    padding: $tabs-link-padding
+    margin-bottom: -#{v(tabs-border-bottom-width, $tabs-border-bottom-width)}
+    padding: v(tabs-link-padding, $tabs-link-padding)
     vertical-align: top
     &:hover
-      border-bottom-color: $tabs-link-hover-border-bottom-color
-      color: $tabs-link-hover-color
+      border-bottom-color: v(tabs-link-hover-border-bottom-color, $tabs-link-hover-border-bottom-color)
+      color: v(tabs-link-hover-color, $tabs-link-hover-color)
   li
     display: block
     &.is-active
       a
-        border-bottom-color: $tabs-link-active-border-bottom-color
-        color: $tabs-link-active-color
+        border-bottom-color: v(tabs-link-active-border-bottom-color, $tabs-link-active-border-bottom-color)
+        color: v(tabs-link-active-color, $tabs-link-active-color)
   ul
     align-items: center
-    border-bottom-color: $tabs-border-bottom-color
-    border-bottom-style: $tabs-border-bottom-style
-    border-bottom-width: $tabs-border-bottom-width
+    border-bottom-color: v(tabs-border-bottom-color, $tabs-border-bottom-color)
+    border-bottom-style: v(tabs-border-bottom-style, $tabs-border-bottom-style)
+    border-bottom-width: v(tabs-border-bottom-width, $tabs-border-bottom-width)
     display: flex
     flex-grow: 1
     flex-shrink: 0
@@ -92,62 +92,62 @@ $tabs-toggle-link-active-color: $link-invert !default
   &.is-boxed
     a
       border: 1px solid transparent
-      border-radius: $tabs-boxed-link-radius $tabs-boxed-link-radius 0 0
+      border-radius: v(tabs-boxed-link-radius, $tabs-boxed-link-radius) $tabs-boxed-link-radius 0 0
       &:hover
-        background-color: $tabs-boxed-link-hover-background-color
-        border-bottom-color: $tabs-boxed-link-hover-border-bottom-color
+        background-color: v(tabs-boxed-link-hover-background-color, $tabs-boxed-link-hover-background-color)
+        border-bottom-color: v(tabs-boxed-link-hover-border-bottom-color, $tabs-boxed-link-hover-border-bottom-color)
     li
       &.is-active
         a
-          background-color: $tabs-boxed-link-active-background-color
-          border-color: $tabs-boxed-link-active-border-color
-          border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important
+          background-color: v(tabs-boxed-link-active-background-color, $tabs-boxed-link-active-background-color)
+          border-color: v(tabs-boxed-link-active-border-color, $tabs-boxed-link-active-border-color)
+          border-bottom-color: v(tabs-boxed-link-active-border-bottom-color, $tabs-boxed-link-active-border-bottom-color) !important
   &.is-fullwidth
     li
       flex-grow: 1
       flex-shrink: 0
   &.is-toggle
     a
-      border-color: $tabs-toggle-link-border-color
-      border-style: $tabs-toggle-link-border-style
-      border-width: $tabs-toggle-link-border-width
+      border-color: v(tabs-toggle-link-border-color, $tabs-toggle-link-border-color)
+      border-style: v(tabs-toggle-link-border-style, $tabs-toggle-link-border-style)
+      border-width: v(tabs-toggle-link-border-width, $tabs-toggle-link-border-width)
       margin-bottom: 0
       position: relative
       &:hover
-        background-color: $tabs-toggle-link-hover-background-color
-        border-color: $tabs-toggle-link-hover-border-color
+        background-color: v(tabs-toggle-link-hover-background-color, $tabs-toggle-link-hover-background-color)
+        border-color: v(tabs-toggle-link-hover-border-color, $tabs-toggle-link-hover-border-color)
         z-index: 2
     li
       & + li
-        margin-left: -#{$tabs-toggle-link-border-width}
+        margin-left: calc(-1 * #{v(tabs-toggle-link-border-width, $tabs-toggle-link-border-width)})
       &:first-child a
-        border-top-left-radius: $tabs-toggle-link-radius
-        border-bottom-left-radius: $tabs-toggle-link-radius
+        border-top-left-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
+        border-bottom-left-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
       &:last-child a
-        border-bottom-right-radius: $tabs-toggle-link-radius
-        border-top-right-radius: $tabs-toggle-link-radius
+        border-bottom-right-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
+        border-top-right-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
       &.is-active
         a
-          background-color: $tabs-toggle-link-active-background-color
-          border-color: $tabs-toggle-link-active-border-color
-          color: $tabs-toggle-link-active-color
+          background-color: v(tabs-toggle-link-active-background-color, $tabs-toggle-link-active-background-color)
+          border-color: v(tabs-toggle-link-active-border-color, $tabs-toggle-link-active-border-color)
+          color: v(tabs-toggle-link-active-color, $tabs-toggle-link-active-color)
           z-index: 1
     ul
       border-bottom: none
     &.is-toggle-rounded
       li
         &:first-child a
-          border-bottom-left-radius: $radius-rounded
-          border-top-left-radius: $radius-rounded
+          border-bottom-left-radius: v(radius-rounded, $radius-rounded)
+          border-top-left-radius: v(radius-rounded, $radius-rounded)
           padding-left: 1.25em
         &:last-child a
-          border-bottom-right-radius: $radius-rounded
-          border-top-right-radius: $radius-rounded
+          border-bottom-right-radius: v(radius-rounded, $radius-rounded)
+          border-top-right-radius: v(radius-rounded, $radius-rounded)
           padding-right: 1.25em
   // Sizes
   &.is-small
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
   &.is-large
-    font-size: $size-large
+    font-size: v(size-large, $size-large)
