--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,24 +1,24 @@
 $box-color: $text !default
 $box-background-color: $scheme-main !default
 $box-radius: $radius-large !default
-$box-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default
+$box-shadow: 0 0.5em 1em -0.125em bulmaRgba($scheme-invert, 0.1), 0 0px 0 1px bulmaRgba($scheme-invert, 0.02) !default
 $box-padding: 1.25rem !default
 
-$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1px $link !default
-$box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link !default
+$box-link-hover-shadow: 0 0.5em 1em -0.125em bulmaRgba($scheme-invert, 0.1), 0 0 0 1px $link !default
+$box-link-active-shadow: inset 0 1px 2px bulmaRgba($scheme-invert, 0.2), 0 0 0 1px $link !default
 
 .box
   @extend %block
-  background-color: $box-background-color
-  border-radius: $box-radius
-  box-shadow: $box-shadow
-  color: $box-color
+  background-color: v(box-background-color, $box-background-color)
+  border-radius: v(box-radius, $box-radius)
+  box-shadow: v(box-shadow, $box-shadow)
+  color: v(box-color, $box-color)
   display: block
-  padding: $box-padding
+  padding: v(box-padding, $box-padding)
 
 a.box
   &:hover,
   &:focus
-    box-shadow: $box-link-hover-shadow
+    box-shadow: v(box-link-hover-shadow, $box-link-hover-shadow)
   &:active
-    box-shadow: $box-link-active-shadow
+    box-shadow: v(box-link-active-shadow, $box-link-active-shadow)
