--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -7,15 +7,15 @@ $icon-dimensions-large: 3rem !default
   align-items: center
   display: inline-flex
   justify-content: center
-  height: $icon-dimensions
-  width: $icon-dimensions
+  height: v(icon-dimensions, $icon-dimensions)
+  width: v(icon-dimensions, $icon-dimensions)
   // Sizes
   &.is-small
-    height: $icon-dimensions-small
-    width: $icon-dimensions-small
+    height: v(icon-dimensions-small, $icon-dimensions-small)
+    width: v(icon-dimensions-small, $icon-dimensions-small)
   &.is-medium
-    height: $icon-dimensions-medium
-    width: $icon-dimensions-medium
+    height: v(icon-dimensions-medium, $icon-dimensions-medium)
+    width: v(icon-dimensions-medium, $icon-dimensions-medium)
   &.is-large
-    height: $icon-dimensions-large
-    width: $icon-dimensions-large
+    height: v(icon-dimensions-large, $icon-dimensions-large)
+    width: v(icon-dimensions-large, $icon-dimensions-large)
