--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -5,9 +5,9 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 
 .notification
   @extend %block
-  background-color: $notification-background-color
-  border-radius: $notification-radius
-  padding: $notification-padding
+  background-color: v(notification-background-color, $notification-background-color)
+  border-radius: v(notification-radius, $notification-radius)
+  padding: v(notification-padding, $notification-padding)
   position: relative
   a:not(.button):not(.dropdown-item)
     color: currentColor
@@ -16,7 +16,7 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     color: currentColor
   code,
   pre
-    background: $notification-code-background-color
+    background: v(notification-code-background-color, $notification-code-background-color)
   pre code
     background: transparent
   & > .delete
@@ -32,12 +32,12 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
     &.is-#{$name}
-      background-color: $color
-      color: $color-invert
+      background-color: v($name, $color)
+      color: v($name+'-invert', $color-invert)
       // If light and dark colors are provided
       @if length($pair) >= 4
         $color-light: nth($pair, 3)
         $color-dark: nth($pair, 4)
         &.is-light
-          background-color: $color-light
-          color: $color-dark
+          background-color: v($name+'-light', $color-light)
+          color: v($name+'-dark', $color-dark)
