--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -25,13 +25,13 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default
 
 .table
   @extend %block
-  background-color: $table-background-color
-  color: $table-color
+  background-color: v(table-background-color, $table-background-color)
+  color: v(table-color, $table-color)
   td,
   th
-    border: $table-cell-border
-    border-width: $table-cell-border-width
-    padding: $table-cell-padding
+    border: v(table-cell-border, $table-cell-border)
+    border-width: v(table-cell-border-width, $table-cell-border-width)
+    padding: v(table-cell-padding, $table-cell-padding)
     vertical-align: top
     // Colors
     @each $name, $pair in $colors
@@ -46,42 +46,42 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default
       white-space: nowrap
       width: 1%
     &.is-selected
-      background-color: $table-row-active-background-color
-      color: $table-row-active-color
+      background-color: v(table-row-active-background-color, $table-row-active-background-color)
+      color: v(table-row-active-color, $table-row-active-color)
       a,
       strong
         color: currentColor
     &.is-vcentered
       vertical-align: middle
   th
-    color: $table-cell-heading-color
+    color: v(table-cell-heading-color, $table-cell-heading-color)
     &:not([align])
       text-align: left
   tr
     &.is-selected
-      background-color: $table-row-active-background-color
-      color: $table-row-active-color
+      background-color: v(table-row-active-background-color, $table-row-active-background-color)
+      color: v(table-row-active-color, $table-row-active-color)
       a,
       strong
         color: currentColor
       td,
       th
-        border-color: $table-row-active-color
+        border-color: v(table-row-active-color, $table-row-active-color)
         color: currentColor
   thead
-    background-color: $table-head-background-color
+    background-color: v(table-head-background-color, $table-head-background-color)
     td,
     th
-      border-width: $table-head-cell-border-width
-      color: $table-head-cell-color
+      border-width: v(table-head-cell-border-width, $table-head-cell-border-width)
+      color: v(table-head-cell-color, $table-head-cell-color)
   tfoot
-    background-color: $table-foot-background-color
+    background-color: v(table-foot-background-color, $table-foot-background-color)
     td,
     th
-      border-width: $table-foot-cell-border-width
-      color: $table-foot-cell-color
+      border-width: v(table-foot-cell-border-width, $table-foot-cell-border-width)
+      color: v(table-foot-cell-color, $table-foot-cell-color)
   tbody
-    background-color: $table-body-background-color
+    background-color: v(table-body-background-color, $table-body-background-color)
     tr
       &:last-child
         td,
@@ -103,14 +103,14 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default
     tbody
       tr:not(.is-selected)
         &:hover
-          background-color: $table-row-hover-background-color
+          background-color: v(table-row-hover-background-color, $table-row-hover-background-color)
     &.is-striped
       tbody
         tr:not(.is-selected)
           &:hover
-            background-color: $table-row-hover-background-color
+            background-color: v(table-row-hover-background-color, $table-row-hover-background-color)
             &:nth-child(even)
-              background-color: $table-striped-row-even-hover-background-color
+              background-color: v(table-striped-row-even-hover-background-color, $table-striped-row-even-hover-background-color)
   &.is-narrow
     td,
     th
@@ -119,7 +119,7 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default
     tbody
       tr:not(.is-selected)
         &:nth-child(even)
-          background-color: $table-striped-row-even-background-color
+          background-color: v(table-striped-row-even-background-color, $table-striped-row-even-background-color)
 
 .table-container
   @extend %block
