--- a/sass/form/checkbox-radio.sass
+++ b/sass/form/checkbox-radio.sass
@@ -6,10 +6,10 @@
   input
     cursor: pointer
   &:hover
-    color: $input-hover-color
+    color: v(input-hover-color, $input-hover-color)
   &[disabled],
   fieldset[disabled] &
-    color: $input-disabled-color
+    color: v(input-disabled-color, $input-disabled-color)
     cursor: not-allowed
 
 .checkbox
