--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -23,37 +23,37 @@ $file-name-max-width: 16em !default
     $color-invert: nth($pair, 2)
     &.is-#{$name}
       .file-cta
-        background-color: $color
+        background-color: v($name, $color)
         border-color: transparent
-        color: $color-invert
+        color: v($name+'-invert', $color-invert)
       &:hover,
       &.is-hovered
         .file-cta
-          background-color: bulmaDarken($color, 2.5%)
+          background-color: vDarken($name, $color, 2.5%)
           border-color: transparent
-          color: $color-invert
+          color: v($name+'-invert', $color-invert)
       &:focus,
       &.is-focused
         .file-cta
           border-color: transparent
           box-shadow: 0 0 0.5em bulmaRgba($color, 0.25)
-          color: $color-invert
+          color: v($name+'-invert', $color-invert)
       &:active,
       &.is-active
         .file-cta
-          background-color: bulmaDarken($color, 5%)
+          background-color: vDarken($name, $color, 5%)
           border-color: transparent
-          color: $color-invert
+          color: v($name+'-invert', $color-invert)
   // Sizes
   &.is-small
-    font-size: $size-small
+    font-size: v(size-small, $size-small)
   &.is-medium
-    font-size: $size-medium
+    font-size: v(size-medium, $size-medium)
     .file-icon
       .fa
         font-size: 21px
   &.is-large
-    font-size: $size-large
+    font-size: v(size-large, $size-large)
     .file-icon
       .fa
         font-size: 28px
@@ -67,7 +67,7 @@ $file-name-max-width: 16em !default
       border-top-left-radius: 0
     &.is-empty
       .file-cta
-        border-radius: $file-radius
+        border-radius: v(file-radius, $file-radius)
       .file-name
         display: none
   &.is-boxed
@@ -95,9 +95,9 @@ $file-name-max-width: 16em !default
         font-size: 35px
     &.has-name
       .file-cta
-        border-radius: $file-radius $file-radius 0 0
+        border-radius: v(file-radius, $file-radius) $file-radius 0 0
       .file-name
-        border-radius: 0 0 $file-radius $file-radius
+        border-radius: 0 0 v(file-radius, $file-radius) $file-radius
         border-width: 0 1px 1px
   &.is-centered
     justify-content: center
@@ -110,9 +110,9 @@ $file-name-max-width: 16em !default
   &.is-right
     justify-content: flex-end
     .file-cta
-      border-radius: 0 $file-radius $file-radius 0
+      border-radius: 0 v(file-radius, $file-radius) v(file-radius, $file-radius) 0
     .file-name
-      border-radius: $file-radius 0 0 $file-radius
+      border-radius: v(file-radius, $file-radius) 0 0 v(file-radius, $file-radius)
       border-width: 1px 0 1px 1px
       order: -1
 
@@ -125,16 +125,16 @@ $file-name-max-width: 16em !default
   position: relative
   &:hover
     .file-cta
-      background-color: bulmaDarken($file-cta-background-color, 2.5%)
-      color: $file-cta-hover-color
+      background-color: vDarken(file-cta-background-color, $file-cta-background-color, 2.5%)
+      color: v(file-cta-hover-color, $file-cta-hover-color)
     .file-name
-      border-color: bulmaDarken($file-name-border-color, 2.5%)
+      border-color: vDarken(file-name-border-color, $file-name-border-color, 2.5%)
   &:active
     .file-cta
-      background-color: bulmaDarken($file-cta-background-color, 5%)
-      color: $file-cta-active-color
+      background-color: vDarken(file-cta-background-color, $file-cta-background-color, 5%)
+      color: v(file-cta-active-color, $file-cta-active-color)
     .file-name
-      border-color: bulmaDarken($file-name-border-color, 5%)
+      border-color: vDarken(file-name-border-color, $file-name-border-color, 5%)
 
 .file-input
   height: 100%
@@ -148,23 +148,23 @@ $file-name-max-width: 16em !default
 .file-cta,
 .file-name
   @extend %control
-  border-color: $file-border-color
-  border-radius: $file-radius
+  border-color: v(file-border-color, $file-border-color)
+  border-radius: v(file-radius, $file-radius)
   font-size: 1em
   padding-left: 1em
   padding-right: 1em
   white-space: nowrap
 
 .file-cta
-  background-color: $file-cta-background-color
-  color: $file-cta-color
+  background-color: v(file-cta-background-color, $file-cta-background-color)
+  color: v(file-cta-color, $file-cta-color)
 
 .file-name
-  border-color: $file-name-border-color
-  border-style: $file-name-border-style
-  border-width: $file-name-border-width
+  border-color: v(file-name-border-color, $file-name-border-color)
+  border-style: v(file-name-border-style, $file-name-border-style)
+  border-width: v(file-name-border-width, $file-name-border-width)
   display: block
-  max-width: $file-name-max-width
+  max-width: v(file-name-max-width, $file-name-max-width)
   overflow: hidden
   text-align: left
   text-overflow: ellipsis
