--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -4,7 +4,7 @@ $textarea-min-height: 8em !default
 
 %input-textarea
   @extend %input
-  box-shadow: $input-shadow
+  box-shadow: v(input-shadow, $input-shadow)
   max-width: 100%
   width: 100%
   &[readonly]
@@ -18,7 +18,7 @@ $textarea-min-height: 8em !default
       &.is-focused,
       &:active,
       &.is-active
-        box-shadow: $input-focus-box-shadow-size bulmaRgba($color, 0.25)
+        box-shadow: v(input-focus-box-shadow-size, $input-focus-box-shadow-size) bulmaRgba($color, 0.25)
   // Sizes
   &.is-small
     +control-small
@@ -37,9 +37,9 @@ $textarea-min-height: 8em !default
 .input
   @extend %input-textarea
   &.is-rounded
-    border-radius: $radius-rounded
-    padding-left: calc(#{$control-padding-horizontal} + 0.375em)
-    padding-right: calc(#{$control-padding-horizontal} + 0.375em)
+    border-radius: v(radius-rounded, $radius-rounded)
+    padding-left: calc(#{v(control-padding-horizontal, $control-padding-horizontal)} + 0.375em)
+    padding-right: calc(#{v(control-padding-horizontal, $control-padding-horizontal)} + 0.375em)
   &.is-static
     background-color: transparent
     border-color: transparent
@@ -52,11 +52,11 @@ $textarea-min-height: 8em !default
   display: block
   max-width: 100%
   min-width: 100%
-  padding: $textarea-padding
+  padding: v(textarea-padding, $textarea-padding)
   resize: vertical
   &:not([rows])
-    max-height: $textarea-max-height
-    min-height: $textarea-min-height
+    max-height: v(textarea-max-height, $textarea-max-height)
+    min-height: v(textarea-min-height, $textarea-min-height)
   &[rows]
     height: initial
   // Modifiers
