--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -27,29 +27,29 @@ $input-radius: $radius !default
 
 =input
   @extend %control
-  background-color: $input-background-color
-  border-color: $input-border-color
-  border-radius: $input-radius
-  color: $input-color
+  background-color: v(input-background-color, $input-background-color)
+  border-color: v(input-border-color, $input-border-color)
+  border-radius: v(input-radius, $input-radius)
+  color: v(input-color, $input-color)
   +placeholder
-    color: $input-placeholder-color
+    color: v(input-placeholder-color, $input-placeholder-color)
   &:hover,
   &.is-hovered
-    border-color: $input-hover-border-color
+    border-color: v(input-hover-border-color, $input-hover-border-color)
   &:focus,
   &.is-focused,
   &:active,
   &.is-active
-    border-color: $input-focus-border-color
-    box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color
+    border-color: v(input-focus-border-color, $input-focus-border-color)
+    box-shadow: v(input-focus-box-shadow-size, $input-focus-box-shadow-size) v(input-focus-box-shadow-color, $input-focus-box-shadow-color)
   &[disabled],
   fieldset[disabled] &
-    background-color: $input-disabled-background-color
-    border-color: $input-disabled-border-color
+    background-color: v(input-disabled-background-color, $input-disabled-background-color)
+    border-color: v(input-disabled-border-color, $input-disabled-border-color)
     box-shadow: none
-    color: $input-disabled-color
+    color: v(input-disabled-color, $input-disabled-color)
     +placeholder
-      color: $input-disabled-placeholder-color
+      color: v(input-disabled-placeholder-color, $input-disabled-placeholder-color)
 
 %input
   +input
