--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -5,7 +5,7 @@ $column-gap: 0.75rem !default
   flex-basis: 0
   flex-grow: 1
   flex-shrink: 1
-  padding: $column-gap
+  padding: v(column-gap, $column-gap)
   .columns.is-mobile > &.is-narrow
     flex: none
   .columns.is-mobile > &.is-full
@@ -428,13 +428,9 @@ $column-gap: 0.75rem !default
         margin-left: percentage($i / 12)
 
 .columns
-  margin-left: (-$column-gap)
-  margin-right: (-$column-gap)
-  margin-top: (-$column-gap)
-  &:last-child
-    margin-bottom: (-$column-gap)
+  margin: calc(-1 * #{v(column-gap, $column-gap)})
   &:not(:last-child)
-    margin-bottom: calc(1.5rem - #{$column-gap})
+    margin-bottom: calc(1.5rem - #{v(column-gap, $column-gap)})
   // Modifiers
   &.is-centered
     justify-content: center
