--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -3,7 +3,7 @@ $footer-color: false !default
 $footer-padding: 3rem 1.5rem 6rem !default
 
 .footer
-  background-color: $footer-background-color
-  padding: $footer-padding
+  background-color: v(footer-background-color, $footer-background-color)
+  padding: v(footer-padding, $footer-padding)
   @if $footer-color
-    color: $footer-color
+    color: v(footer-color, $footer-color)
