--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -41,7 +41,7 @@ $hero-body-padding-large: 18rem 1.5rem !default
       .navbar-link
         &:hover,
         &.is-active
-          background-color: bulmaDarken($color, 5%)
+          background-color: vDarken($name, $color, 5%)
           color: $color-invert
       .tabs
         a
@@ -67,8 +67,8 @@ $hero-body-padding-large: 18rem 1.5rem !default
       // Modifiers
       @if type-of($color) == 'color'
         &.is-bold
-          $gradient-top-left: darken(saturate(adjust-hue($color, -10deg), 10%), 10%)
-          $gradient-bottom-right: lighten(saturate(adjust-hue($color, 10deg), 5%), 5%)
+          $gradient-top-left: vHSLAdjust($name, $color, -10deg, 10%, -10%)
+          $gradient-bottom-right: vHSLAdjust($name, $color, 10deg, 5%, 5%)
           background-image: linear-gradient(141deg, $gradient-top-left 0%, $color 71%, $gradient-bottom-right 100%)
           +mobile
             .navbar-menu
@@ -76,15 +76,15 @@ $hero-body-padding-large: 18rem 1.5rem !default
   // Sizes
   &.is-small
     .hero-body
-      padding: $hero-body-padding-small
+      padding: v(hero-body-padding-small, $hero-body-padding-small)
   &.is-medium
     +tablet
       .hero-body
-        padding: $hero-body-padding-medium
+        padding: v(hero-body-padding-medium, $hero-body-padding-medium)
   &.is-large
     +tablet
       .hero-body
-        padding: $hero-body-padding-large
+        padding: v(hero-body-padding-large, $hero-body-padding-large)
   &.is-halfheight,
   &.is-fullheight,
   &.is-fullheight-with-navbar
@@ -142,4 +142,4 @@ $hero-body-padding-large: 18rem 1.5rem !default
 .hero-body
   flex-grow: 1
   flex-shrink: 0
-  padding: $hero-body-padding
+  padding: v(hero-body-padding, $hero-body-padding)
