--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -3,11 +3,11 @@ $section-padding-medium: 9rem 1.5rem !default
 $section-padding-large: 18rem 1.5rem !default
 
 .section
-  padding: $section-padding
+  padding: v(section-padding, $section-padding)
   // Responsiveness
   +desktop
     // Sizes
     &.is-medium
-      padding: $section-padding-medium
+      padding: v(section-padding-medium, $section-padding-medium)
     &.is-large
-      padding: $section-padding-large
+      padding: v(section-padding-large, $section-padding-large)
