--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -13,18 +13,15 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
   -moz-appearance: none
   -webkit-appearance: none
   align-items: center
-  border: $control-border-width solid transparent
-  border-radius: $control-radius
+  border: v(control-border-width, $control-border-width) solid transparent
+  border-radius: v(control-radius, $control-radius)
   box-shadow: none
   display: inline-flex
-  font-size: $size-normal
-  height: $control-height
+  font-size: v(size-normal, $size-normal)
+  height: v(control-height, $control-height)
   justify-content: flex-start
-  line-height: $control-line-height
-  padding-bottom: $control-padding-vertical
-  padding-left: $control-padding-horizontal
-  padding-right: $control-padding-horizontal
-  padding-top: $control-padding-vertical
+  line-height: v(control-line-height, $control-line-height)
+  padding: v(control-padding-vertical, $control-padding-vertical) v(control-padding-horizontal, $control-padding-horizontal)
   position: relative
   vertical-align: top
   // States
@@ -42,9 +39,9 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
 
 // The controls sizes use mixins so they can be used at different breakpoints
 =control-small
-  border-radius: $control-radius-small
-  font-size: $size-small
+  border-radius: v(control-radius-small, $control-radius-small)
+  font-size: v(size-small, $size-small)
 =control-medium
-  font-size: $size-medium
+  font-size: v(size-medium, $size-medium)
 =control-large
-  font-size: $size-large
+  font-size: v(size-large, $size-large)
